--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shaik Fayaz - Data Analyst | Portfolio</title>
-    <meta name="description" content="Data Analyst & ML Engineer with expertise in Python, SQL, Power BI. View my portfolio showcasing real-world data science projects." />
+
+    <title>Shaik Fayaz – Data Analyst Portfolio</title>
+
+    <meta name="description" content="Shaik Fayaz – Data Analyst & ML Enthusiast. Explore projects built with Python, SQL, Power BI, and Machine Learning. Download resume and connect on GitHub or LinkedIn." />
     <meta name="author" content="Shaik Fayaz" />
-    
+    <meta name="keywords" content="Shaik Fayaz, Data Analyst, Portfolio, Python, SQL, Power BI, Tableau, Machine Learning, Data Science" />
+
+    <!-- Favicon (optional) -->
+    <link rel="icon" href="/favicon.ico" />
+
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
 
-    <meta property="og:title" content="Shaik Fayaz - Data Analyst Portfolio" />
-    <meta property="og:description" content="Data Analyst & ML Engineer with expertise in Python, SQL, Power BI. View my portfolio showcasing real-world data science projects." />
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="Shaik Fayaz – Data Analyst Portfolio" />
+    <meta property="og:description" content="Explore Shaik Fayaz's data projects, resume, and skills in analytics, machine learning, and BI tools." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://shaikfayaz.dev" /> <!-- Replace with your domain -->
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" /> <!-- Replace with your image -->
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@shaikfayaz" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Shaik Fayaz – Data Analyst Portfolio" />
+    <meta name="twitter:description" content="Explore data projects, resume, and skills of Shaik Fayaz – Data Analyst & Storyteller." />
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
+
   </head>
 
   <body>
